Add NPC creation, item-based holograms, and equipment support
Introduced NPC creation with inventory selection, item-based hologram lines, and enhanced equipment handling. Refactored hologram logic with dynamic line offsets and streamlined metadata management. Updated registries to support new Minecraft 1.21.1 protocol features.